Refactor and clean up code across multiple components
- Updated formatting and spacing in services-component.ts for consistency.
- Removed unnecessary blank lines in home.model.ts.
- Cleaned up footer.html by removing excess whitespace and ensuring proper indentation.
- Standardized formatting in footer.scss, including consistent spacing and color codes.
- Enhanced footer.ts with improved comments and formatting for better readability.
- Refined header.html to eliminate unnecessary whitespace and improve structure.
- Adjusted header.scss for consistent formatting and spacing.
- Improved header.ts with clearer comments and formatting.
- Added missing commas in environment files for consistency.
- Cleaned up index.html by standardizing tag formatting.
- Simplified main.ts by removing unnecessary line breaks.
- Enhanced styles.scss for consistent formatting and spacing throughout.

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Metropolis Living - Urban Real Estate Developer</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Premium urban real estate developer connecting people, spaces & lifestyles.">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8" />
+    <title>Metropolis Living - Urban Real Estate Developer</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Premium urban real estate developer connecting people, spaces & lifestyles." />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
